--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -82,7 +82,16 @@
                             <RowDefinition Height="auto"/>
                         </Grid.RowDefinitions>
 
-                        <Image x:Name="VisitorPhoto" Source="{Binding ImagePath}" Grid.Row="0" Grid.Column="0" Height="400" Width="250" HorizontalAlignment="Left" Margin="50,25,0,0" MinWidth="250" MinHeight="400"/>
+                        <Image x:Name="VisitorPhoto" Source="{Binding ImagePath}" Grid.Row="0" Grid.Column="0" Height="400" Width="250" HorizontalAlignment="Left" Margin="63,10,0,130" MinWidth="250" MinHeight="400" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="2">
+                            <Image.RenderTransform>
+                                <TransformGroup>
+                                    <ScaleTransform/>
+                                    <SkewTransform/>
+                                    <RotateTransform Angle="90"/>
+                                    <TranslateTransform/>
+                                </TransformGroup>
+                            </Image.RenderTransform>
+                        </Image>
 
                         <Button Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Width="150" Height="75" Margin="100,100,19,10"
                             HorizontalAlignment="Left" x:Name="TakePhoto" >
@@ -396,7 +405,7 @@
 
                         <ScrollViewer  Grid.Row="1" VerticalScrollBarVisibility="Auto" Height="900" Width="1000" Margin="124,0,27,0">
                             <StackPanel  Grid.Row="1" Name="imageContainer" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                <Image Source="{Binding DocImage}" Width="200" Height="150" Stretch="Uniform" />
+                                <Image Width="200" Height="150" Stretch="Uniform" />
                             </StackPanel>
                         </ScrollViewer>
 
@@ -428,7 +437,7 @@
                     </Button>
 
                     <StackPanel  Grid.Row="0" Name="IdContainer" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="4" Margin="0,104,50,184" Width="750" Height="490" Grid.RowSpan="2" >
-                        <Image Source="{Binding CardImage}" Height="20" Stretch="Uniform" RenderTransformOrigin="1.05,0.473" Margin="710,0,10,0" />
+                        <Image  Height="20" Stretch="Uniform" RenderTransformOrigin="1.05,0.473" Margin="710,0,10,0" />
                     </StackPanel>
 
                     <TextBox x:Name="IDcardNameDummy"  Text="{Binding GeneratedIDcardFileName, Mode=TwoWay}" Grid.Column="1" Grid.Row="1" TextChanged="IdCardFileName_TextChanged" Visibility="Hidden"/>
