--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -379,7 +379,10 @@
 
                                 <!---<TextBox x:Name="txtPurposeOfVisit1" Text="{Binding caPurposeOfVisit ,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="1,10,19,10" MinHeight="30"/>-->
                                 <Label x:Name="lblDuration" Margin="30,12,0,10.2" Grid.Row="17" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="68">Duration</Label>
-                                <TextBox x:Name="txtDuration" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>
+                               <!-- <TextBox x:Name="txtDuration" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
+                                <DatePicker x:Name="datepicker" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>
+                              <!--  <DatePicker x:Name="datepicker1" Text="{Binding Durationto,Mode=TwoWay}" Grid.Row="17" Grid.Column="2" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
+
                                 <Label x:Name="lblEmergencyContactNo" Margin="30,11.8,0,10.4" Grid.Row="18" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="161">Emergency Contact No</Label>
                                 <TextBox x:Name="txtEmergencyContactNo" Text="{Binding EmergencyContactNo,Mode=TwoWay}" Grid.Row="18" Grid.Column="1" Margin="0.8,10.8,19.4,9.4" MinHeight="30"/>
                             </Grid>
