--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -367,26 +367,26 @@
                                 <ComboBox x:Name="CCompanyName" Text="{Binding CompanyName, Mode=TwoWay}" Grid.Row="11" Grid.Column="1" Margin="0.8,20,19.4,9.6" MinHeight="30" SelectionChanged="VisitorCompanyName_SelectionChanged" ContextMenuClosing="VisitorCompanyName_ContextMenuClosing" DropDownClosed="VisitorCompanyName_DropDownClosed"/>
 
                                 <TextBox x:Name="txtCompanyName" Text="{Binding CompanyName,Mode=TwoWay}" Grid.Row="11" Grid.Column="2" Margin="0.6,10.2,18.6,9.4" MinHeight="30"/>
-                                <Label x:Name="lblIdNo" Margin="30,11.6,0,10.6" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="115">Id Card Number</Label>
-                                <TextBox x:Name="txtIdNo" Text="{Binding IdNo,Mode=TwoWay}" Grid.Row="12" Grid.Column="1" Margin="0.8,10.6,19.4,9.6" MinHeight="30" />
-                                <Label x:Name="lblPassportNo" Margin="30,12.4,0,10.4" Grid.Row="13" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="30" Width="125">Passport Number</Label>
-                                <TextBox x:Name="txtPassportNo" Text="{Binding PassportNo,Mode=TwoWay}" Grid.Row="13" Grid.Column="1" Margin="0.8,10.4,19.4,9.4" MinHeight="30"/>
-                                <Label x:Name="lblDateandPlaceofIssue" Margin="30,11.6,0,10.6" Grid.Row="14" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="227">Passport Date And Place Of Issue</Label>
-                                <TextBox x:Name="txtDateandPlaceofIssue" Text="{Binding DateandPlaceofIssue,Mode=TwoWay}" Grid.Row="14" Grid.Column="1" Margin="0.8,10.6,19.4,9.6" MinHeight="30"/>
-                                <Label x:Name="lblPassportValidity" Margin="30,12.4,0,10.8" Grid.Row="15" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="127">Passport Valid Till</Label>
-                                <TextBox x:Name="txtPassportValidty" Text="{Binding PassportValidity,Mode=TwoWay}" Grid.Row="15" Grid.Column="1" Margin="0.8,10.4,19.4,8.8" MinHeight="30"/>
-                                <Label x:Name="lblPurposeOfVisit1" Margin="30,12.2,0,10" Grid.Row="16" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="116">Purpose Of Visit</Label>
-                                <ComboBox x:Name="caPurposeforVisit" Text="{Binding caPurposeOfVisit,Mode=TwoWay}" Grid.Row="16" Grid.Column="1" Margin="0.8,11.2,19.4,9" MinHeight="30"/>
+                              <!--  <Label x:Name="lblIdNo" Margin="30,11.6,0,10.6" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="115">Id Card Number</Label>
+                                <TextBox x:Name="txtIdNo" Text="{Binding IdNo,Mode=TwoWay}" Grid.Row="12" Grid.Column="1" Margin="0.8,10.6,19.4,9.6" MinHeight="30" />-->
+                                <Label x:Name="lblPassportNo" Margin="30,12.4,0,10.4" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="30" Width="125">Passport Number</Label>
+                                <TextBox x:Name="txtPassportNo" Text="{Binding PassportNo,Mode=TwoWay}" Grid.Row="12" Grid.Column="1" Margin="0.8,10.4,19.4,9.4" MinHeight="30"/>
+                                <Label x:Name="lblDateandPlaceofIssue" Margin="30,11.6,0,10.6" Grid.Row="13" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="227">Passport Date And Place Of Issue</Label>
+                                <TextBox x:Name="txtDateandPlaceofIssue" Text="{Binding DateandPlaceofIssue,Mode=TwoWay}" Grid.Row="13" Grid.Column="1" Margin="0.8,10.6,19.4,9.6" MinHeight="30"/>
+                                <Label x:Name="lblPassportValidity" Margin="30,12.4,0,10.8" Grid.Row="14" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="127">Passport Valid Till</Label>
+                                <TextBox x:Name="txtPassportValidty" Text="{Binding PassportValidity,Mode=TwoWay}" Grid.Row="14" Grid.Column="1" Margin="0.8,10.4,19.4,8.8" MinHeight="30"/>
+                                <Label x:Name="lblPurposeOfVisit1" Margin="30,12.2,0,10" Grid.Row="15" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="116">Purpose Of Visit</Label>
+                                <ComboBox x:Name="caPurposeforVisit" Text="{Binding caPurposeOfVisit,Mode=TwoWay}" Grid.Row="15" Grid.Column="1" Margin="0.8,11.2,19.4,9" MinHeight="30"/>
 
 
                                 <!---<TextBox x:Name="txtPurposeOfVisit1" Text="{Binding caPurposeOfVisit ,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="1,10,19,10" MinHeight="30"/>-->
-                                <Label x:Name="lblDuration" Margin="30,12,0,10.2" Grid.Row="17" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="68">Duration</Label>
+                                <Label x:Name="lblDuration" Margin="30,12,0,10.2" Grid.Row="16" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="68">Duration</Label>
                                <!-- <TextBox x:Name="txtDuration" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
-                                <DatePicker x:Name="datepicker" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>
+                                <DatePicker x:Name="datepicker" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="16" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>
                               <!--  <DatePicker x:Name="datepicker1" Text="{Binding Durationto,Mode=TwoWay}" Grid.Row="17" Grid.Column="2" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
 
-                                <Label x:Name="lblEmergencyContactNo" Margin="30,11.8,0,10.4" Grid.Row="18" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="161">Emergency Contact No</Label>
-                                <TextBox x:Name="txtEmergencyContactNo" Text="{Binding EmergencyContactNo,Mode=TwoWay}" Grid.Row="18" Grid.Column="1" Margin="0.8,10.8,19.4,9.4" MinHeight="30"/>
+                                <Label x:Name="lblEmergencyContactNo" Margin="30,11.8,0,10.4" Grid.Row="17" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="161">Emergency Contact No</Label>
+                                <TextBox x:Name="txtEmergencyContactNo" Text="{Binding EmergencyContactNo,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,10.8,19.4,9.4" MinHeight="30"/>
                             </Grid>
                         </TabItem.Content>
                     </TabItem>
