--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -7,12 +7,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GuestRegistrationDeskUI.Views"
              mc:Ignorable="d" Background="White" FontSize="12" 
-             d:DesignHeight="1200" d:DesignWidth="1500"
-             Height="auto" Width="auto"  >
+             d:DesignHeight="1200"
+             Height="auto" Width="1760"  >
 
     <Grid MinHeight="1400" Margin="0,0,10,10"  >
 
-        <TabControl TabStripPlacement="Left" Margin="0,-2,0,422" Padding="0 0 0 0" FontSize="18" FontWeight="Bold">
+        <TabControl TabStripPlacement="Left" Margin="0,-2,0,422" Padding="0 0 0 0" FontSize="18" FontWeight="Bold" SelectionChanged="TabControl_SelectionChanged_2">
             <TabItem Name="ScanIdDocuments" Header="Scan" HorizontalContentAlignment="Center" Padding="25 50 50 25">
                 <TabItem.Content>
                     <Grid Margin="0,0,520.4,431">
@@ -104,7 +104,7 @@
 
             <TabItem Name="VisitorDetails" Header="Additional Details" Padding="25 50 50 25" Margin="0 0 0 0" VerticalAlignment="Center">
 
-                <TabControl TabStripPlacement="Top" Margin="3,17,-216.6,-284" Padding="0 0 0 0" FontSize="14" Height="1188" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged" RenderTransformOrigin="0.504,0.676">
+                <TabControl TabStripPlacement="Top" Margin="-2,17,239.4,-284" Padding="0 0 0 0" FontSize="14" Height="1188" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged" RenderTransformOrigin="0.504,0.676">
                     <TabItem Name="VisitorDataSheet" Width="250" Header="Visitor Data Sheet">
                         <TabItem.Content>
 
@@ -163,14 +163,14 @@
 
 
                                 <Label x:Name="lblVisitDateTime" Margin="30,11,0,11" Grid.Row="5" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="139" Grid.ColumnSpan="2">Visit Date and Time</Label>
-                               <!-- <TextBox x:Name="txtVisitDateTime" Text="{Binding VisitDateTime,Mode=TwoWay}" Grid.Row="5" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>-->
+                                <!-- <TextBox x:Name="txtVisitDateTime" Text="{Binding VisitDateTime,Mode=TwoWay}" Grid.Row="5" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>-->
                                 <DatePicker x:Name="vdatepicker1" Text="{Binding VisitDateTime,Mode=TwoWay}" Grid.Row="5" Grid.Column="2" Margin="0.8,11,19.4,9.2" MinHeight="30"/>
 
 
                                 <Label x:Name="lblVisitDuration" Margin="30,11,0,11" Grid.Row="6" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="101" Grid.ColumnSpan="2">Visit Duration</Label>
-                              <!--  <TextBox x:Name="txtVisitDuration" Text="{Binding VisitDuration,Mode=TwoWay}" Grid.Row="6" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>-->
+                                <!--  <TextBox x:Name="txtVisitDuration" Text="{Binding VisitDuration,Mode=TwoWay}" Grid.Row="6" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>-->
                                 <DatePicker x:Name="vdatepicker" Text="{Binding VisitDuration,Mode=TwoWay}" Grid.Row="6" Grid.Column="2" Margin="0.8,11,19.4,9.2" MinHeight="30"/>
-                                
+
                                 <Label x:Name="lblDepartmentManager" Margin="30,11,0,11" Grid.Row="7" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="152" Grid.ColumnSpan="2">Department Manager</Label>
                                 <ComboBox x:Name="CmbDepartmentManager" Text="{Binding DepartmentManager,Mode=TwoWay}" Grid.Row="7" Grid.Column="2" Margin="1,10,19,10" MinHeight="30"/>
 
@@ -370,7 +370,7 @@
                                 <ComboBox x:Name="CCompanyName" Text="{Binding CompanyName, Mode=TwoWay}" Grid.Row="11" Grid.Column="1" Margin="0.8,20,19.4,9.6" MinHeight="30" SelectionChanged="VisitorCompanyName_SelectionChanged" ContextMenuClosing="VisitorCompanyName_ContextMenuClosing" DropDownClosed="VisitorCompanyName_DropDownClosed"/>
 
                                 <TextBox x:Name="txtCompanyName" Text="{Binding CompanyName,Mode=TwoWay}" Grid.Row="11" Grid.Column="2" Margin="0.6,10.2,18.6,9.4" MinHeight="30"/>
-                              <!--  <Label x:Name="lblIdNo" Margin="30,11.6,0,10.6" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="115">Id Card Number</Label>
+                                <!--  <Label x:Name="lblIdNo" Margin="30,11.6,0,10.6" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="115">Id Card Number</Label>
                                 <TextBox x:Name="txtIdNo" Text="{Binding IdNo,Mode=TwoWay}" Grid.Row="12" Grid.Column="1" Margin="0.8,10.6,19.4,9.6" MinHeight="30" />-->
                                 <Label x:Name="lblPassportNo" Margin="30,12.4,0,10.4" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="30" Width="125">Passport Number</Label>
                                 <TextBox x:Name="txtPassportNo" Text="{Binding PassportNo,Mode=TwoWay}" Grid.Row="12" Grid.Column="1" Margin="0.8,10.4,19.4,9.4" MinHeight="30"/>
@@ -384,9 +384,9 @@
 
                                 <!---<TextBox x:Name="txtPurposeOfVisit1" Text="{Binding caPurposeOfVisit ,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="1,10,19,10" MinHeight="30"/>-->
                                 <Label x:Name="lblDuration" Margin="30,12,0,10.2" Grid.Row="16" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="68">Duration</Label>
-                               <!-- <TextBox x:Name="txtDuration" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
+                                <!-- <TextBox x:Name="txtDuration" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
                                 <DatePicker x:Name="datepicker" Text="{Binding Duration,Mode=TwoWay}" Grid.Row="16" Grid.Column="1" Margin="0.8,11,19.4,9.2" MinHeight="30"/>
-                              <!--  <DatePicker x:Name="datepicker1" Text="{Binding Durationto,Mode=TwoWay}" Grid.Row="17" Grid.Column="2" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
+                                <!--  <DatePicker x:Name="datepicker1" Text="{Binding Durationto,Mode=TwoWay}" Grid.Row="17" Grid.Column="2" Margin="0.8,11,19.4,9.2" MinHeight="30"/>-->
 
                                 <Label x:Name="lblEmergencyContactNo" Margin="30,11.8,0,10.4" Grid.Row="17" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="161">Emergency Contact No</Label>
                                 <TextBox x:Name="txtEmergencyContactNo" Text="{Binding EmergencyContactNo,Mode=TwoWay}" Grid.Row="17" Grid.Column="1" Margin="0.8,10.8,19.4,9.4" MinHeight="30"/>
