--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -7,8 +7,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GuestRegistrationDeskUI.Views"
              mc:Ignorable="d" Background="White" FontSize="12" 
-             d:DesignHeight="1200"
-             Height="auto" Width="1760"  >
+             
+             Height="auto" Width="auto"  >
 
     <Grid MinHeight="1400" Margin="0,0,10,10"  >
 
