--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -10,9 +10,9 @@
              
              Height="auto" Width="auto"  >
 
-    <Grid MinHeight="1400" Margin="0,0,10,10"  >
+    <Grid MinHeight="1400" Margin="0,0,10,10" Background="CadetBlue" >
 
-        <TabControl TabStripPlacement="Left" Margin="0,-2,0,422" Padding="0 0 0 0" FontSize="18" FontWeight="Bold" SelectionChanged="TabControl_SelectionChanged_2">
+        <TabControl TabStripPlacement="Left" Margin="0,-2,0,422" Padding="0 0 0 0" FontSize="18" FontWeight="Bold" SelectionChanged="TabControl_SelectionChanged_2" Background="CadetBlue">
             <TabItem Name="ScanIdDocuments" Header="Scan" HorizontalContentAlignment="Center" Padding="25 50 50 25">
                 <TabItem.Content>
                     <Grid Margin="0,0,520.4,431">
@@ -104,7 +104,7 @@
 
             <TabItem Name="VisitorDetails" Header="Additional Details" Padding="25 50 50 25" Margin="0 0 0 0" VerticalAlignment="Center">
 
-                <TabControl TabStripPlacement="Top" Margin="-2,17,239.4,-284" Padding="0 0 0 0" FontSize="14" Height="1188" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged" RenderTransformOrigin="0.504,0.676">
+                <TabControl TabStripPlacement="Top" Margin="-2,17,239.4,-284" Padding="0 0 0 0" FontSize="14" Height="1188" VerticalAlignment="Top" SelectionChanged="TabControl_SelectionChanged" RenderTransformOrigin="0.504,0.676" Background="CadetBlue">
                     <TabItem Name="VisitorDataSheet" Width="250" Header="Visitor Data Sheet">
                         <TabItem.Content>
 
