passport validity in id

--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -184,10 +184,12 @@
                                 <TextBox x:Name="txtDateandPlaceofIssue" Text="{Binding DateandPlaceofIssue,Mode=TwoWay}" Grid.Row="7" Grid.Column="4" Margin="1.2,10.4,19,9.8" MinHeight="30"/>
                                 <Label x:Name="lblDateandPlaceofIssue1" Margin="29.8,11.4,0,10.8" Grid.Row="8" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="227">Passport Date Of Issue</Label>
                                 <DatePicker x:Name="datepicker1" Text="{Binding PDateofIssue,Mode=TwoWay}" Grid.Row="8" Grid.Column="4" Margin="1.2,11,19,8.6" MinHeight="30"/>
-                                <!--    <Label x:Name="lblPassportValidity" Margin="30,12.4,0,10.8" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="127" Grid.ColumnSpan="2">Passport Valid Till</Label>
-                                <TextBox x:Name="txtPassportValidty" Text="{Binding PassportValidity,Mode=TwoWay}" Grid.Row="9" Grid.Column="2" Margin="1,10.4,19.2,8.8" MinHeight="30"/>-->
-                                <Label x:Name="lblAlias" Margin="30,13.4,0,10.4" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="204">Alias Name (If applicable)</Label>
-                                <TextBox x:Name="txtAlias" Text="{Binding Alias,Mode=TwoWay}" Grid.Row="9" Grid.Column="1" Margin="105.2,8,86.8,11.2" MinHeight="30" Grid.ColumnSpan="2"/>
+                                <Label x:Name="lblPassportValidity" Margin="30,12.4,0,10.8" Grid.Row="9" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="127" Grid.ColumnSpan="2">Passport Valid Till</Label>
+                                <!--<TextBox x:Name="txtPassportValidty" Text="{Binding PassportValidity,Mode=TwoWay}" Grid.Row="9" Grid.Column="2" Margin="1,10.4,19.2,8.8" MinHeight="30"/>-->
+                                <DatePicker x:Name="datepickerp" Text="{Binding PassportValidity,Mode=TwoWay}" Grid.Row="9" Grid.Column="1" Margin="105.6,14.4,108.4,5.4" MinHeight="30" Grid.ColumnSpan="2"/>
+
+                                <Label x:Name="lblAlias" Margin="30,13.4,0,10.4" Grid.Row="11" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="204">Alias Name (If applicable)</Label>
+                                <TextBox x:Name="txtAlias" Text="{Binding Alias,Mode=TwoWay}" Grid.Row="11" Grid.Column="1" Margin="105.6,19.6,86.4,11" MinHeight="30" Grid.ColumnSpan="2"/>
 
 
                                 <Label x:Name="lblPurposeOfVisit1" Margin="29.8,12.2,0,10" Grid.Row="5" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="116">Purpose Of Visit</Label>
@@ -200,8 +202,8 @@
                                 <Label x:Name="lblEmergencyContactNo" Margin="29.8,13.2,0,10.6" Grid.Row="9" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="161">Emergency Contact No</Label>
                                 <TextBox x:Name="txtEmergencyContactNo" Text="{Binding EmergencyContactNo,Mode=TwoWay}" Grid.Row="9" Grid.Column="4" Margin="1.2,11.2,19,8.6" MinHeight="30"/>
 
-                                <Label x:Name="lblPreviousresidences" Margin="30,19.6,0,17" Grid.Row="11" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="334" Grid.ColumnSpan="2">Previous Residences for the last seven years</Label>
-                                <TextBox x:Name="txtPResidences" Text="{Binding PResidence,Mode=TwoWay}" Grid.Row="11" Grid.Column="2" Margin="1.2,11.6,19,10.2" MinHeight="30" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Grid.ColumnSpan="3" Grid.RowSpan="5"/>
+                                <Label x:Name="lblPreviousresidences" Margin="30,19.6,0,17" Grid.Row="12" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="334" Grid.ColumnSpan="2">Previous Residences for the last seven years</Label>
+                                <TextBox x:Name="txtPResidences" Text="{Binding PResidence,Mode=TwoWay}" Grid.Row="12" Grid.Column="1" Margin="104.6,22,92.6,35" MinHeight="30" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Grid.ColumnSpan="4" Grid.RowSpan="6"/>
 
 
 
@@ -427,7 +429,7 @@
                         <Button Grid.Row="0" Padding="10 5" Width="178" Height="35" Margin="124,11,0,11.8"
                                  HorizontalAlignment="Left" x:Name="GenerateVisitorDocument" Content="Visitor" />
                         <Button Grid.Row="0" Padding="10 5" Width="178" Height="35" Margin="353,11,648.2,11.8"
-                                 HorizontalAlignment="Center" x:Name="GenerateContractDocument" Content="Contract" Click="GenerateContractDocument_Click" />
+                                 HorizontalAlignment="Center" x:Name="GenerateContractDocument" Content="Contractor" Click="GenerateContractDocument_Click" />
 
                         <!--<ComboBox x:Name="printerComboBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="503,17,0,0"/>-->
 
