--- a/GuestRegistrationDeskUI/Views/MainScreenView.xaml
+++ b/GuestRegistrationDeskUI/Views/MainScreenView.xaml
@@ -235,10 +235,10 @@
                                 <!--  <Label x:Name="lblName" Margin="30,11,0,11" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Name</Label>
                                 <TextBox x:Name="txtName" Text="{Binding caForvName,Mode=TwoWay}" Grid.Row="1" Grid.Column="1" Margin="1,10,359,10" MinHeight="30" Grid.ColumnSpan="2"/>-->
                                 <Label x:Name="lblTitle" Margin="30,11.6,0,11.6" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="38">Title</Label>
-                                <TextBox x:Name="txtTitle" Text="{Binding Title,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="1,10.4,17.6,9.8" MinHeight="30" />
+                                <TextBox x:Name="txtTitle" Text="{Binding Title,Mode=TwoWay}" Grid.Row="2" Grid.Column="1" Margin="105.6,19.6,86.4,11" MinHeight="30" MinWidth="200" />
                                 <Label x:Name="lblCompany1" Margin="30,11.4,0,10.8" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center" Height="29" Width="72">Company</Label>
-                                <ComboBox x:Name="cavCompanyName" Text="{Binding cavCompany, Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="0.6,10.4,19,9.8" MinHeight="30" SelectionChanged="VisitorCompanyName_SelectionChanged" ContextMenuClosing="VisitorCompanyName_ContextMenuClosing" DropDownClosed="VisitorCompanyName_DropDownClosed"/>
-                                <TextBox x:Name="txtcavCompany" Text="{Binding cavCompany, Mode=TwoWay}" Grid.Row="3" Grid.Column="2" Margin="1,10.4,17.6,9.8" MinHeight="30" />
+                                <ComboBox x:Name="cavCompanyName" Text="{Binding cavCompany, Mode=TwoWay}" Grid.Row="3" Grid.Column="1" Margin="105.6,19.6,86.4,11" MinHeight="30"  SelectionChanged="VisitorCompanyName_SelectionChanged" ContextMenuClosing="VisitorCompanyName_ContextMenuClosing" DropDownClosed="VisitorCompanyName_DropDownClosed"/>
+                                <TextBox x:Name="txtcavCompany" Text="{Binding cavCompany, Mode=TwoWay}" Grid.Row="3" Grid.Column="2" Margin="9.6,18.8,182.4,11" MinHeight="30" MinWidth="200" />
 
                                 <!--<Label x:Name="lblDate1" Margin="30,11,0,11" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center">Date</Label>
                                 <TextBox x:Name="txtDate1" Text="{Binding cavDate,Mode=TwoWay}" Grid.Row="4" Grid.Column="1" Margin="1,10,359,10" MinHeight="30" Grid.ColumnSpan="2"/>-->
